# merge_tool

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE-APACHE  README.md  pyproject.toml  test.gctmrg
.github/workflows/: cd.yml  ci.yml
ci/: build-ci.sh  build-container.sh  build-docker.sh  check-version.sh  gh-fetch-artifacts.sh  test-ci.sh  test-docker.sh
cli/: Cargo.toml
cli/src/: main.rs
cmake/: merge_tool.cmake
cmake/test_project/: CMakeLists.txt
doc/: bootload_protocol.md  bootloader_trailer.md  btl.drawio  config_file.md  ddp_protocol.md  flash_layout.md  script_file_format.md  signature_format.md
examples/: script.py
gui/: .gitignore  README.md  package-lock.json  package.json  webpack.main.config.js  webpack.renderer.config.js
gui/html/: index.html
gui/js/: main.js  renderer.js
gui/native/: Cargo.toml
gui/native/src/: address_pane.rs  app.rs  fw_config.rs  lean_field.rs  lib.rs  runner.rs  selection_box.rs  text_field.rs
gui/scss/: icofont.css  main.scss
jenkins/: Dockerfile  build-docker.sh  build.sh  docker-init.sh  docker-install.sh  init.sh
python/merge_tool/: info.py
src/: app_package.rs  base.rs  blocking_ddp.rs  btl_trailer.rs  changelog.rs  command.rs  config.rs  crc.rs  ddp.rs  ed25519.rs  firmware.rs  git_description.rs  header.rs  intel_hex.rs  lib.rs  main.rs  process.rs  protocol.rs  script.rs  script_cmd.rs  srecord.rs  xcmd.rs
tests/: app_f1.hex  app_f2.hex  btl_f1.hex  integration.rs  merge.rs  test.gctmrg
