[package]
name = "merge_tool"
version = "0.1.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.13.6"
hex = "0.4.2"
byteorder = "1.3.4"
sha2 = "0.8.2"
itertools = "0.9.0"
assert_matches = "1.3.0"
regex = "1"
lazy_static = "1.4.0"
pathdiff = "0.2"
log = "0.4"
