[package]
name = "merge_tool"
version = "0.3.0-alpha.4"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
byteorder = "1.3"
sha2 = "0.8"
itertools = "0.9"
regex = "1"
lazy_static = "1.4"
pathdiff = "0.2"
log = "0.4"
thiserror = "1"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.7"
semver = { version = "1.0.21", features = ["serde"] }
gix = { version = "0.58.0", features = ["revision"] }
anyhow = "1.0.79"
chrono = { version = "0.4.32", features = ["serde"] }
ciborium = "0.2.2"
base64 = "0.22.1"

[dev-dependencies]
assert_matches = "1.5"
serial_test = "3.0.0"

[profile.release]
strip = "debuginfo"
