[package]
name = "merge_tool_gui"
version = "0.1.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "merge_tool_gui"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
greenhorn = {git = "https://github.com/raffber/greenhorn.git",  rev = "46c5002"}
async-std = {version = "1.5.0", features = ["unstable"]}
merge_tool = {path = "../.."}